--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Portfolio</title>
+    <!-- Add any additional meta tags, stylesheets, or scripts here -->
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Volkan Guney</h1>
+        <p>Developer | AI Enthusiast</p>
+    </header>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <!-- Add project details and links here -->
+        <div class="project">
+            <h3>Project 1</h3>
+            <p>Description of Project 1.</p>
+            <a href="#">View Project</a>
+        </div>
+        <!-- Repeat this structure for each project -->
+    </section>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Write a brief introduction about yourself, your skills, and your passion for projects.</p>
+    </section>
+
+    <footer>
+        <p>Contact: volkanguneyca@gmail.com</p>
+        <!-- Add links to your social media profiles -->
+    </footer>
+    <!-- Add any additional scripts or analytics code here -->
 </body>
 </html>
